force-app/main/default/objects/Related_Contact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Contacts</relationshipLabel>
    <relationshipName>Related_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>