force-app/main/default/objects/Related_Contact__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liason_Sponsor</fullName>
                <label>Liason/Sponsor</label>
            </value>
            <value>
                <fullName>Buying group principle</fullName>
                <isActive>false</isActive>
                <label>Buying group principle</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>