force-app/main/default/objects/Related_Contact__c/listViews/AS_Chat_Related_Contact.listView-meta.xml
<ListView>
    <fullName>AS_Chat_Related_Contact</fullName>
    <filterScope>Queue</filterScope>
    <label>AS Chat</label>
    <queue>AS_Chat</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>