force-app/main/default/objects/Related_Contact__c/listViews/Buy_Grohe_Chat_Canada_Related_Contact.listView-meta.xml
<ListView>
    <fullName>Buy_Grohe_Chat_Canada_Related_Contact</fullName>
    <filterScope>Queue</filterScope>
    <label>Buy Grohe Chat - Canada</label>
    <queue>Buy_Grohe_Chat_Canada</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>