force-app/main/default/objects/Related_Contact__c/listViews/DXV_Chat_Related_Contact.listView-meta.xml
<ListView>
    <fullName>DXV_Chat_Related_Contact</fullName>
    <filterScope>Queue</filterScope>
    <label>DXV Chat</label>
    <queue>DXV_Chat</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>