force-app/main/default/objects/Related_Contact__c/listViews/FIAT_Chat_Related_Contact.listView-meta.xml
<ListView>
    <fullName>FIAT_Chat_Related_Contact</fullName>
    <filterScope>Queue</filterScope>
    <label>FIAT Chat</label>
    <queue>FIAT_Chat</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>