force-app/main/default/objects/Related_Contact__c/listViews/Grohe_Chat_Canada_Related_Contact.listView-meta.xml
<ListView>
    <fullName>Grohe_Chat_Canada_Related_Contact</fullName>
    <filterScope>Queue</filterScope>
    <label>Grohe Chat - Canada</label>
    <queue>Grohe_Chat_Canada</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>