force-app/main/default/objects/Related_Contact__c/listViews/Live_Agent_BP_com_Related_Contact.listView-meta.xml
<ListView>
    <fullName>Live_Agent_BP_com_Related_Contact</fullName>
    <filterScope>Queue</filterScope>
    <label>BP Chat - US</label>
    <queue>BP_Chat_US</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>