force-app/main/default/objects/Related_Contact__c/listViews/Live_Agents_Chat_Related_Contact.listView-meta.xml
<ListView>
    <fullName>Live_Agents_Chat_Related_Contact</fullName>
    <filterScope>Queue</filterScope>
    <label>Live Agents Chat</label>
    <queue>Live_Agents_Chat</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>