force-app/main/default/objects/Related_Contact__c/listViews/Lixil_Insider_Chat_Related_Contact.listView-meta.xml
<ListView>
    <fullName>Lixil_Insider_Chat_Related_Contact</fullName>
    <filterScope>Queue</filterScope>
    <label>Lixil Insider Chat</label>
    <queue>Lixil_Insider_Chat</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>